loaves/compiler/incan_emit/tests/snapshots/codegen_snapshot_tests__user_defined_decorators.snap
---
source: tests/codegen_snapshot_tests.rs
expression: normalize_projected_symbols_for_readable_codegen(& rust_code)
---
// Generated by the Incan compiler v<INCAN_VERSION>

// __INCAN_INSERT_MODS__

incan_std_core::__incan_stdlib_version_check!("<INCAN_STDLIB_VERSION>");
#[inline(always)]
pub(crate) fn __incan_init_module_statics() {
    static __INCAN_STATIC_INIT_RUNNING: std::sync::atomic::AtomicBool = std::sync::atomic::AtomicBool::new(
        false,
    );
    if __INCAN_STATIC_INIT_RUNNING.load(std::sync::atomic::Ordering::Acquire) {
        return;
    }
    static __INCAN_STATIC_INIT_ONCE: std::sync::OnceLock<()> = std::sync::OnceLock::new();
    __INCAN_STATIC_INIT_ONCE
        .get_or_init(|| {
            struct __IncanStaticInitGuard<'a>(&'a std::sync::atomic::AtomicBool);
            impl Drop for __IncanStaticInitGuard<'_> {
                fn drop(&mut self) {
                    self.0.store(false, std::sync::atomic::Ordering::Release);
                }
            }
            __INCAN_STATIC_INIT_RUNNING
                .store(true, std::sync::atomic::Ordering::Release);
            let _guard = __IncanStaticInitGuard(&__INCAN_STATIC_INIT_RUNNING);
            std::sync::LazyLock::force(&__INCAN_DECORATED_LABEL);
        });
}
fn parse(value: i64) -> i64 {
    __incan_init_module_statics();
    return value;
}
fn as_int(_: fn(i64) -> String) -> fn(i64) -> i64 {
    __incan_init_module_statics();
    return parse;
}
fn __incan_original_label(_: i64) -> String {
    __incan_init_module_statics();
    return "value".to_string();
}
static __INCAN_DECORATED_LABEL: std::sync::LazyLock<
    incan_std_core::storage::StaticCell<fn(i64) -> i64>,
> = std::sync::LazyLock::new(|| incan_std_core::storage::StaticCell::new(
    as_int(__incan_original_label),
));
fn label(__incan_arg_0: i64) -> i64 {
    __incan_init_module_statics();
    return {
        __incan_init_module_statics();
        __INCAN_DECORATED_LABEL.get()
    }(__incan_arg_0);
}
fn run() -> i64 {
    __incan_init_module_statics();
    return label(1);
}
fn main() {
    __incan_init_module_statics();
    std::panic::set_hook(
        std::boxed::Box::new(|panic_info| {
            if let Some(message) = panic_info.payload().downcast_ref::<&str>() {
                eprintln!("{message}");
            } else if let Some(message) = panic_info.payload().downcast_ref::<String>() {
                eprintln!("{message}");
            } else {
                eprintln!("generated program panicked");
            }
        }),
    );
    let _result = run();
}
