loaves/compiler/incan_emit/tests/snapshots/codegen_snapshot_tests__web_route_extractors.snap
---
source: tests/codegen_snapshot_tests.rs
expression: normalize_projected_symbols_for_readable_codegen(& rust_code)
---
// Generated by the Incan compiler v<INCAN_VERSION>

// __INCAN_INSERT_MODS__

incan_std_core::__incan_stdlib_version_check!("<INCAN_STDLIB_VERSION>");
pub use crate::__incan_std::r#async;
pub use crate::__incan_std::web::route;
pub use crate::__incan_std::web::GET;
pub use crate::__incan_std::web::POST;
#[incan_web_macros::route("/posts/{year}/{month}", methods = ["GET"])]
async fn get_posts(year: i64, month: i64) -> String {
    let total = year + month;
    return total.to_string();
}
#[incan_web_macros::route("/users/{id}", methods = ["POST"])]
async fn create_user(id: i64) -> String {
    return id.to_string();
}
